--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "mongodb": "^3.3.3",
-    "twilio": "^3.37.0"
+    "twilio": "^3.37.0",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
