--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "mongodb": "^3.3.3",
+    "screenshotmachine": "^2.0.0",
     "twilio": "^3.37.0",
     "unirest": "^0.6.0"
   },
